@@ -1,3 +1,10 @@
+Fri Feb 20 10:39:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/datastructures.py,xappy/unittests/calc_hash.py: Add
+	  calc_hash() method to ProcessedDocument, returning a hash to use
+	  to avoid reindexing documents which have not changed.  Patch from
+	  Pablo.
+
 Fri Feb 20 10:21:03 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/fieldactions.py,xappy/indexerconnection.py,
